--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,8 @@ matplotlib==3.2.1
 numpy==1.19.5
 opencv-python==4.4.0.46
 path==15.0.0
-tensorflow==2.4.0
+tensorflow
+requests
+fastapi[all]
+uvicorn[standard]
+craft-text-detector
